--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 		<meta name="theme-color" content="#000000" />
 		<meta
     	name="description"
-    	content="Web site created using create-react-app"
-    />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    	content="Les Locaux du Réseau"
+    	/>
+		<meta property="og:image" content="%PUBLIC_URL%/favicon.ico" />
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<title>Les locaux du réseau</title>
 	</head>
